<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center">
        <Button android:id="@+id/delay_button_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delay_normal" />
        <Button android:id="@+id/delay_button_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
            android:minWidth="50sp"
            android:text="@string/delay_ui" />
        <Button android:id="@+id/delay_button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delay_game" />
        <Button android:id="@+id/delay_button_fastest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delay_fastest" />
    </LinearLayout>
    <TextView android:id="@+id/delay_or_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/delay_or" />
    <TextView android:id="@+id/delay_rate_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/delay_prompt" />
    <EditText android:id="@+id/delay_rate_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="1">
        <Button android:id="@+id/delay_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:gravity="center"
            android:text="@string/delay_submit" />
        <Button android:id="@+id/delay_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:gravity="center"
            android:text="@string/delay_cancel" />
    </LinearLayout>

</LinearLayout>