<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView android:id="@+id/sensor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:shadowColor="#00FF00"
        android:shadowRadius="1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout android:id="@+id/item_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sensor_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true">
        <LinearLayout android:id="@+id/data_container"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.60"
            android:orientation="vertical"
            android:weightSum="1">
            <TextView android:id="@+id/stream_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/stream_rate" />
            <TextView android:id="@+id/sensor_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
        <LinearLayout android:id="@+id/listener_container"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            android:orientation="vertical">
            <Button android:id="@+id/set_listener_button"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.33"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/set_listener" />
            <Button android:id="@+id/remove_listener_button"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.33"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/remove_listener" />
            <Button android:id="@+id/view_chart_button"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.33"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/view_chart" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>